[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
spin = "0.9"
volatile = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
x86 = "0.52"
multiboot2 = "0.22"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
